--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
       working on dealing with data center failures (besides enjoying free food).
       I spent six wonderful years at <a href="http://www.sysnet.ucsd.edu/sysnet/"  target="_blank">sysnet</a> at the <a href="http://cseweb.ucsd.edu/"  target="_blank">University of California San Diego</a> until <a href="http://cseweb.ucsd.edu/~yyzhou/" target="_blank">my rock star advisor</a> kicked me out (I wished to be a tenured grad student<sup><a href="#ref1">1</a></sup>).
       I worked with <a href="http://www.netapp.com/atg/"  target="_blank">NetApp</a> to study production data on tap.
-      I had a short experience at <a href="<a href="https://whova.com/whova-event-app/" target="_blank">Whova</a>
-      where I learned dedication.
+      I had a short experience at <a href="https://whova.com/whova-event-app/" target="_blank">Whova</a>
+      where I learned dedication (try out their <a href="https://whova.com/virtual-conference-platform/" target="_blank">virtual conference platform</a>).
       I worked in Germany (and backpacked Europe) for 1.5 years at <a href="http://www.uni-goettingen.de/" target="_blank">Goettingen</a> before starting grad school.
     </p>
 
