--- a/pub.html
+++ b/pub.html
@@ -55,7 +55,22 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
-
+	  
+    <td class="date"><font color="#083b89">FSE'20</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+							<strong>Understanding and Discovering Software Configuration Dependencies in Cloud Systems</strong> [tbd]
+						<br>
+            					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
+						<br>
+						In Proceedings of the 2020 ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Sacramento, CA, Nov. 8-13, 2020.
+					</span>
+				</div>
+			</td>
+		</tr>
+	  
     <td class="date"><font color="#083b89">Sigmetrics'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
