--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                     <a href="https://conf.researchr.org/home/icse-2021" target="_blank">ICSE</a>,
           	      </p>
                   <p class="STYLE223">2020
+		    <a href="https://www.usenix.org/conference/osdi20" target="_blank">OSDI</a>,
                     <a href="https://www.sigmobile.org/mobisys/2020/" target="_blank">MobiSys</a>,
                     <a href="https://edge-sys.github.io/2020/submission.html" target="_blank">EdgeSys</a>,
                     <a href="https://2020.esec-fse.org/track/esecfse-2020-tool-demos" target="_blank">FSE Tool/Demo</a>,
