--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
       I spent six wonderful years at <a href="http://www.sysnet.ucsd.edu/sysnet/"  target="_blank">sysnet</a> at the <a href="http://cseweb.ucsd.edu/"  target="_blank">University of California San Diego</a> until <a href="http://cseweb.ucsd.edu/~yyzhou/" target="_blank">my rock star advisor</a> kicked me out (I wished to be a tenured grad student<sup><a href="#ref1">1</a></sup>).
       I worked with <a href="http://www.netapp.com/atg/"  target="_blank">NetApp</a> to study production data on tap.
       I had a short experience at <a href="https://whova.com/whova-event-app/" target="_blank">Whova</a>
-      where I learned dedication (try out Whova's <a href="https://whova.com/virtual-conference-platform/" target="_blank">virtual conference platform</a>!).
+      where I learned dedication (try out Whova's <a href="https://whova.com/virtual-conference-platform/" target="_blank">virtual conference platform</a>).
       I worked in Germany and backpacked Europe for 1.5 years at <a href="http://www.uni-goettingen.de/" target="_blank">Goettingen</a> before starting grad school.
     </p>
 
@@ -310,8 +310,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
                           <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-							<p class="STYLE223">The goal of my research is to make computer systems reliable and secure. My mission is to help today's systems defend against all kinds of errors and defects, such as software bugs, configuration errors, and design flaws. I am proud that some of my research helps improve real software systems. See the list of <a href="report.html">issues</a> I helped.</p>
-							<p class="STYLE223">As a systems person, I am interested in various inter-disciplinary black magic, e.g., program analysis, machine learning, and NLP. My view of systems research is to build the right swords to kill the dragon (not windmills!).</p>
+							<p class="STYLE223">The goal of my research is to make computer systems reliable and secure. My mission is to help today's systems defend against all kinds of errors and defects, such as software bugs, configuration errors, and design flaws. I am very happy that some of our work helps improve real software systems (<a href="report.html">issues</a> we helped/fixed).</p>
+							<p class="STYLE223">As a systems person, I am interested in all black magic. My view of systems research is to build the right swords to kill the dragon (not windmills).</p>
 						  </TD>
                           </TR>
 		          <TD width="0.5%">&nbsp;</TD>
@@ -384,15 +384,16 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 
                   <TD width="0.5%">&nbsp;</TD>
                       <TR>
-                      <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ cat services</b></span></TD>
+                      <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ cat services   # default=PC</b></span></TD>
                       </TR>
                       <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
                   <p class="STYLE223">2021
+	            <a href="https://2021.eurosys.org/" target="_blank">EuroSys (sponsorship co-chair)</a>,
                     <a href="https://conf.researchr.org/home/icse-2021" target="_blank">ICSE</a>,
           	      </p>
-                  <p class="STYLE223">2020
+                    <p class="STYLE223">2020
 		    <a href="https://www.usenix.org/conference/osdi20" target="_blank">OSDI</a>,
                     <a href="https://www.sigmobile.org/mobisys/2020/" target="_blank">MobiSys</a>,
                     <a href="https://edge-sys.github.io/2020/submission.html" target="_blank">EdgeSys</a>,
@@ -464,7 +465,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 			     <TR>
 				<TD class=content_title>&nbsp;</TD>
 			        <TD class=content width="96%">
-				  <p class="STYLE223"> soccer (<a href="football.html">career</a>); <a href="travel.html">travel</a>; <a href="https://www.youtube.com/watch?v=gAh9NRGNhUU">rock</a>; biking; drinking; reading; movies; turtles</p>
+				  <p class="STYLE223"> soccer (<a href="football.html">career</a>); <a href="travel.html">travel</a>; <a href="https://www.youtube.com/watch?v=gAh9NRGNhUU">rock</a>; biking; drinking; reading; bad jokes; turtles</p>
 			        </TD>
 				<TD class=content_title>&nbsp;</TD>
 			 </TR>
