--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
 							<p class="STYLE223">The goal of my research is to make computer systems reliable and secure. My mission is to help today's systems defend against all kinds of errors and defects, such as software bugs, configuration errors, and design flaws. I am very happy that some of our work helps improve real software systems (<a href="report.html">issues</a> we helped/fixed).</p>
-							<p class="STYLE223">As a systems person, I am interested in all black magic. My view of systems research is to build the right swords to kill the dragon (not windmills).</p>
+							<p class="STYLE223">I am interested in all black magic. My view of systems research is to build the right swords to kill the dragon (not windmills).</p>
 						  </TD>
                           </TR>
 		          <TD width="0.5%">&nbsp;</TD>
