--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 
                   <TD width="0.5%">&nbsp;</TD>
                       <TR>
-                      <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ cat services   # default=PC</b></span></TD>
+                      <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ cat services   # (default=PC)</b></span></TD>
                       </TR>
                       <TR>
                         <TD class=content_title>&nbsp;</TD>
