--- a/index.html
+++ b/index.html
@@ -427,13 +427,12 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="red">3M Foundation Fellowship</font>)</p>
+				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223">Neil Zhao, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223">Sam Cheng, co-advised by Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
                                   <p class="STYLE223">Xudong Sun</p>
 				  <p class="STYLE223">Jack Chen</p>
 				  <p class="STYLE223">Andrew Yoo</p>
-				  <p class="STYLE223">Yuanliang Zhang (visiting student)</p>
                              </TD>
                           </TR>
 
@@ -456,7 +455,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223">UIUC, Facebook, IBM, Azure, and NSF</p>
+				  <p class="STYLE223">UIUC, Facebook, IBM, Azure, GitHub, and NSF</p>
                              </TD>
                          </TR>
 			      
