--- a/pub.html
+++ b/pub.html
@@ -56,6 +56,51 @@ td.papers {
   <!--DWLayoutTable-->
   <tbody>
 	  
+    <td class="date"><font color="#083b89">FSE'20</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+							<strong> Understanding and Discovering Software Configuration Dependencies in Cloud Systems </strong> [<a href="" target="_blank">pdf</a>]
+						<br>
+            					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
+						<br>
+						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Sacramento, California, November, 2020.
+					</span>
+				</div>
+			</td>
+		</tr>
+	
+    <td class="date"><font color="#083b89">SC'20</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+							<strong> Understanding, Detecting, and Localizing Failures in High-Performance Storage Systems </strong> [<a href="" target="_blank">pdf</a>]
+						<br>
+            					Saurabh Jha , Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
+						<br>
+						In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, November, 2020.
+					</span>
+				</div>
+			</td>
+		</tr>
+	
+    <td class="date"><font color="#083b89">MICRO'20</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+							<strong> System Call Checks for Security: Characterization and Architectural Support </strong> [<a href="" target="_blank">pdf</a>]
+						<br>
+            					Dimitrios Skarlatos, Qingrong Chen, Tianyin Xu, and Josep Torrellas,
+						<br>
+						In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Athens, Greece, October, 2020.
+					</span>
+				</div>
+			</td>
+		</tr>
+
     <td class="date"><font color="#083b89">Sigmetrics'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
