--- a/pub.html
+++ b/pub.html
@@ -65,7 +65,7 @@ td.papers {
 						<br>
             					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
 						<br>
-						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Sacramento, California, November, 2020.
+						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Sacramento, California, Nov. 2020.
 					</span>
 				</div>
 			</td>
@@ -80,7 +80,7 @@ td.papers {
 						<br>
             					Saurabh Jha , Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
 						<br>
-						In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, November, 2020.
+						In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, Nov. 2020.
 					</span>
 				</div>
 			</td>
@@ -95,7 +95,7 @@ td.papers {
 						<br>
             					Dimitrios Skarlatos, Qingrong Chen, Tianyin Xu, and Josep Torrellas,
 						<br>
-						In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Athens, Greece, October, 2020.
+						In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Athens, Greece, Oct. 2020.
 					</span>
 				</div>
 			</td>
@@ -110,7 +110,7 @@ td.papers {
 						<br>
             					Hsuan-Chi Kuo, Jianyan Chen, Sibin Mohan, and Tianyin Xu,
 						<br>
-						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Boston, Massachusetts, June 8-12, 2020.
+						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Boston, Massachusetts, June 2020.
 					</span>
 				</div>
 			</td>
@@ -125,7 +125,7 @@ td.papers {
 						<br>
             					Dimitrios Skarlatos, Apostolos Kokolis, Tianyin Xu, and Josep Torrellas,
 						<br>
-						In Proceedings of the 25th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'20</b></font>), Lausanne, Switzerland, Mar. 16-20, 2020.
+						In Proceedings of the 25th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'20</b></font>), Lausanne, Switzerland, Mar. 2020.
 						<br>
 						<font color="#C40233"><b>Best Paper Award</b></font>
 					</span>
@@ -142,7 +142,7 @@ td.papers {
 						<br>
             					Jian Chen, Minghao Zhao, Zhenhua Li, Ennan Zhai, Feng Qian, Hongyi Chen, and Yunhao Liu, and Tianyin Xu,
 						<br>
-						In Proceedings of the 18th USENIX Conference on File and Storage Technologies  (<font color="#083b89"><b>FAST'20</b></font>), Santa Clara, CA, Feb. 24-27, 2020.
+						In Proceedings of the 18th USENIX Conference on File and Storage Technologies  (<font color="#083b89"><b>FAST'20</b></font>), Santa Clara, CA, Feb. 2020.
 					</span>
 				</div>
 			</td>
@@ -159,7 +159,7 @@ td.papers {
                 					Chengcheng Xiang, Yudong Wu, Bingyu Shen, Mingyao Shen, Haochen Huang, Tianyin Xu,
                 					Yuanyuan Zhou, Cindy Moore, Xinxin Jin, and Tianwei Sheng,
     						<br>
-    						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS'19</b></font>), London, UK, Nov. 11-15, 2019.
+    						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS'19</b></font>), London, UK, Nov. 2019.
     					</span>
     				</div>
     			</td>
@@ -176,7 +176,7 @@ td.papers {
             					David Chou, Tianyin Xu, Kaushik Veeraraghavan, Andrew Newell, Sonia Margulis, Lin Xiao,
             					Pol Mauri Ruiz, Justin Meza, Kiryong Ha, Shruti Padmanabha, Kevin Cole, and Dmitri Perelman
 						<br>
-						In Proceedings of the 27th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'19</b></font>), Huntsville, Ontario, Canada, Oct. 27-30, 2019.
+						In Proceedings of the 27th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'19</b></font>), Huntsville, Ontario, Canada, Oct. 2019.
 					</span>
 				</div>
 			</td>
@@ -192,7 +192,7 @@ td.papers {
 						<br>
             					Qifan Yang, Zhenhua Li, Yunhao Liu, Hai Long, Yuanchao Huang, Jiaming He, Tianyin Xu, and Ennan Zhai
 						<br>
-						In Proceedings of the 25th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'19</b></font>), Los Cabos, Mexico, Oct 21-25, 2019.
+						In Proceedings of the 25th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'19</b></font>), Los Cabos, Mexico, Oct. 2019.
 					</span>
 			</div>
 		</td>
@@ -208,7 +208,7 @@ td.papers {
 						<br>
 						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Onur Mutlu
 						<br>
-						In Proceedings of the 18th Internet Measurement Conference (<font color="#083b89"><b>IMC'18</b></font>), Boston, MA, Oct. 31 - Nov. 2, 2018.
+						In Proceedings of the 18th Internet Measurement Conference (<font color="#083b89"><b>IMC'18</b></font>), Boston, MA, Oct. 2018.
 					</span>
 				</div>
 			</td>
@@ -224,7 +224,7 @@ td.papers {
 						<br>
 						Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Shruti Padmanabha, Ashish Shah, Yee Jiun Song, and Tianyin Xu
 						<br>
-						In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'18</b></font>), Carlsbad, CA, Oct. 8-10, 2018.
+						In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'18</b></font>), Carlsbad, CA, Oct. 2018.
 						</span>
 				</div>
 			</td>
@@ -240,7 +240,7 @@ td.papers {
 						<br>
 						Tianyin Xu and Darko Marinov
 						<br>
-						In Proceedings of the 40th International Conference on Software Engineering, New Ideas and Emerging Results (<font color="#083b89"><b>ICSE'18, NIER</b></font>), Gothenburg, Sweden, May 27-Jun. 3, 2018.
+						In Proceedings of the 40th International Conference on Software Engineering, New Ideas and Emerging Results (<font color="#083b89"><b>ICSE'18, NIER</b></font>), Gothenburg, Sweden, May 2018.
 					</span>
 				</div>
 			</td>
@@ -256,7 +256,7 @@ td.papers {
 						<br>
 						He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu
 						<br>
-						In Proceedings of the 16th USENIX Conference on File and Storage Technologies (<font color="#083b89"><b>FAST'18</b></font>), Oakland, CA, Feb. 12-15, 2018.
+						In Proceedings of the 16th USENIX Conference on File and Storage Technologies (<font color="#083b89"><b>FAST'18</b></font>), Oakland, CA, Feb. 2018.
 					</span>
 				</div>
 			</td>
@@ -272,7 +272,7 @@ td.papers {
 						<br>
 						Tianyin Xu, Han Min Naing, Le Lu, and Yuanyuan Zhou
 						<br>
-						In Proceedings of the 35th Annual CHI Conference on Human Factors in Computing Systems (<font color="#083b89"><b>CHI'17</b></font>), Denver, CO, May 6-11, 2017.
+						In Proceedings of the 35th Annual CHI Conference on Human Factors in Computing Systems (<font color="#083b89"><b>CHI'17</b></font>), Denver, CO, May 2017.
 					</span>
 				</div>
 			</td>
@@ -288,7 +288,7 @@ td.papers {
 						<br>
 						Tianyin Xu, Xinxin Jin, Peng Huang, Yuanyuan Zhou, Shan Lu, Long Jin, and Shankar Pasupathy
 						<br>
-						In Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'16</b></font>), Savannah, GA, Nov. 2-4, 2016.
+						In Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'16</b></font>), Savannah, GA, Nov. 2016.
 						<br>
 						<font color="#C40233"><b>Jay Lepreau Best Paper Award</b></font>
 					</span>
@@ -306,7 +306,7 @@ td.papers {
 						<br>
 						Peng Huang, Tianyin Xu, Xinxin Jin, and Yuanyuan Zhou
 						<br>
-						In Proceedings of the 14th International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'16</b></font>), Singapore, Singapore, Jun. 26-30, 2016.
+						In Proceedings of the 14th International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'16</b></font>), Singapore, Singapore, June 2016.
 					</span>
 				</div>
 			</td>
@@ -322,7 +322,7 @@ td.papers {
 						<br>
 						Xinxin Jin, Peng Huang, Tianyin Xu, and Yuanyuan Zhou
 						<br>
-						In Proceedings of the 11th ACM European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'16</b></font>), London, UK, Apr. 18-21, 2016.
+						In Proceedings of the 11th ACM European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'16</b></font>), London, UK, Apr. 2016.
 					</span>
 				</div>
 			</td>
@@ -338,7 +338,7 @@ td.papers {
 						<br>
 						Tianyin Xu, Vineet Pandey, and Scott Klemmer
 						<br>
-						arXiv:1601.01747, Jan. 8, 2016.
+						arXiv:1601.01747, Jan. 2016.
 					</span>
 				</div>
 			</td>
@@ -354,7 +354,7 @@ td.papers {
 						<br>
 						Zhenhua Li, Weiwei Wang, Tianyin Xu, Xin Zhong, Xiang-Yang Li, Yunhao Liu, Christo Wilson, and Ben Y. Zhao
 						<br>
-						In Proceedings of the 13th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'16</b></font>), Santa Clara, CA, Mar. 16-18, 2016.
+						In Proceedings of the 13th USENIX Symposium on Networked Systems Design and Implementation (<font color="#083b89"><b>NSDI'16</b></font>), Santa Clara, CA, Mar. 2016.
 					</span>
 				</div>
 			</td>
@@ -370,7 +370,7 @@ td.papers {
 						<br>
 						Zhenhua Li, Christo Wilson, Tianyin Xu, Yao Liu, Zhen Lu, and Yinlong Wang
 						<br>
-						In Proceedings of the 15th ACM Internet Measurement Conference (<font color="#083b89"><b>IMC'15</b></font>), Tokyo, Japan, Oct. 28-30, 2015.
+						In Proceedings of the 15th ACM Internet Measurement Conference (<font color="#083b89"><b>IMC'15</b></font>), Tokyo, Japan, Oct. 2015.
 					</span>
 				</div>
 			</td>
@@ -386,7 +386,7 @@ td.papers {
 						<br>
 						Tianyin Xu, Long Jin, Xuepeng Fan, Yuanyuan Zhou, Shankar Pasupathy, and Rukma Talwadker
 						<br>
-						In Proceedings of the 10th Joint Meeting of the European Software Engineering Conference and the ACM SIGSOFT Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'15</b></font>), Bergamo, Italy, Aug. 31-Sep. 4, 2015.
+						In Proceedings of the 10th Joint Meeting of the European Software Engineering Conference and the ACM SIGSOFT Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'15</b></font>), Bergamo, Italy, Aug. 2015.
 					</span>
 				</div>
 			</td>
@@ -418,7 +418,7 @@ td.papers {
 						<br>
 						Zhenhua Li, Cheng Jin, Tianyin Xu, Christo Wilson, Yao Liu, Linsong Cheng, Yunhao Liu, Yafei Dai, and Zhi-Li Zhang
 						<br>
-						In Proceedings of the 14th ACM Internet Measurement Conference (<font color="#083b89"><b>IMC'14</b></font>), Vancouver, Canada, Nov. 5-7, 2014.
+						In Proceedings of the 14th ACM Internet Measurement Conference (<font color="#083b89"><b>IMC'14</b></font>), Vancouver, Canada, Nov. 2014.
 					</span>
 				</div>
 			</td>
@@ -434,7 +434,7 @@ td.papers {
 						<br>
 						Jiaqi Zhang, Lakshminarayanan Renganarayana, Xiaolan Zhang, Niyu Ge, Vasanth Bala, Tianyin Xu, and Yuanyuan Zhou
 						<br>
-						In Proceedings of the 19th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'14</b></font>), Salt Lake City, UT, Mar. 1-5, 2014.
+						In Proceedings of the 19th International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'14</b></font>), Salt Lake City, UT, Mar. 2014.
 					</span>
 				</div>
 			</td>
@@ -450,7 +450,7 @@ td.papers {
 						<br>
 						Tianyin Xu, Jiaqi Zhang, Peng Huang, Jing Zheng, Tianwei Sheng, Ding Yuan, Yuanyuan Zhou, and Shankar Pasupathy
 						<br>
-						In Proceedings of the 24th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'13</b></font>), Farmington, PA, Nov. 3-6, 2013.
+						In Proceedings of the 24th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'13</b></font>), Farmington, PA, Nov. 2013.
 					</span>
 				</div>
 			</td>
