--- a/pub.html
+++ b/pub.html
@@ -78,7 +78,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 							<strong> Understanding, Detecting, and Localizing Failures in High-Performance Storage Systems </strong> [<a href="" target="_blank">pdf</a>]
 						<br>
-            					Saurabh Jha , Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
+            					Saurabh Jha, Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
 						<br>
 						In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, Nov. 2020.
 					</span>
@@ -86,7 +86,7 @@ td.papers {
 			</td>
 		</tr>
 	
-    <td class="date"><font color="#083b89">MICRO'20</font></td>
+    <td class="date"><font color="#083b89">MICRO-53</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
