--- a/pub.html
+++ b/pub.html
@@ -61,7 +61,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong> Understanding and Discovering Software Configuration Dependencies in Cloud Systems </strong> [<a href="" target="_blank">pdf</a>]
+							<strong> Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems </strong> [<a href="" target="_blank">pdf</a>]
 						<br>
             					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
 						<br>
